docs/v3.8.0rc1/_sources/gallery/single/stokes.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/stokes.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_stokes.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_stokes.py:


Stokes Parameters Computation
=============================

This example demonstrates the computation and visualization of the Stokes parameters using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-15

.. code-block:: Python

    from TypedUnit import ureg

    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.source import Gaussian








.. GENERATED FROM PYTHON SOURCE LINES 16-17

Defining the source

.. GENERATED FROM PYTHON SOURCE LINES 17-24

.. code-block:: Python

    source = Gaussian(
        wavelength=750 * ureg.nanometer,  # 750 nm
        polarization=10 * ureg.degree,  # Right circular polarization
        optical_power=1 * ureg.watt,  # Arbitrary units
        NA=0.3 * ureg.AU,  # Numerical Aperture
    )








.. GENERATED FROM PYTHON SOURCE LINES 25-26

Defining the scatterer

.. GENERATED FROM PYTHON SOURCE LINES 26-33

.. code-block:: Python

    scatterer = Sphere(
        diameter=300 * ureg.nanometer,  # 300 nm
        source=source,
        medium_property=1.0 * ureg.RIU,  # Refractive property of the surrounding medium
        property=1.4 * ureg.RIU,  # Refractive property of the scatterer
    )








.. GENERATED FROM PYTHON SOURCE LINES 34-35

Computing the data

.. GENERATED FROM PYTHON SOURCE LINES 35-37

.. code-block:: Python

    data = scatterer.get_stokes(sampling=100)  # Specify the number of sampling points








.. GENERATED FROM PYTHON SOURCE LINES 38-39

Plotting the data

.. GENERATED FROM PYTHON SOURCE LINES 39-40

.. code-block:: Python

    figure = data.plot()



.. image-sg:: /gallery/single/images/sphx_glr_stokes_001.png
   :alt: stokes
   :srcset: /gallery/single/images/sphx_glr_stokes_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.365 seconds)


.. _sphx_glr_download_gallery_single_stokes.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: stokes.ipynb <stokes.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: stokes.py <stokes.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: stokes.zip <stokes.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
