docs/v4.0.0/_sources/gallery/single/stokes.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/stokes.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_stokes.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_stokes.py:


Stokes Parameters Computation
=============================

This example demonstrates the computation and visualization of the Stokes parameters using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-33

.. code-block:: Python

    from PyMieSim.units import ureg

    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.source import Gaussian
    from PyMieSim.single.representations import Stokes

    source = Gaussian(
        wavelength=750 * ureg.nanometer,
        polarization=10 * ureg.degree,
        optical_power=1 * ureg.watt,
        NA=0.3 * ureg.AU,
    )

    scatterer = Sphere(
        diameter=300 * ureg.nanometer,
        source=source,
        medium_refractive_index=1.0 * ureg.RIU,
        refractive_index=1.4 * ureg.RIU,
    )

    stokes = Stokes(scatterer=scatterer, sampling=100)

    figure = stokes.plot()



.. image-sg:: /gallery/single/images/sphx_glr_stokes_001.png
   :alt: stokes
   :srcset: /gallery/single/images/sphx_glr_stokes_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.355 seconds)


.. _sphx_glr_download_gallery_single_stokes.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: stokes.ipynb <stokes.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: stokes.py <stokes.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: stokes.zip <stokes.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
